# knowledgebase-query-system

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
data/: kb-vocabulary.ttl
docs/: api-reference.md  architecture.md  examples.md  graph-queries.md
docs/adr/: 001-cli-architecture.md  002-query-methodology.md  003-configuration-management.md  README.md
docs/llm-chat-artifacts/: kb-query-setup-script.sh
docs/sparc/: 01-specification-tests.md  01-specification.md  02-pseudocode-algorithms.md  02-pseudocode-data-structures.md  02-pseudocode.md  03-architecture-diagrams.md  03-architecture-interfaces.md  03-architecture.md  04-refinement-summary.md  04-refinement.md  05-completion.md  README.md
examples/: basic_usage.py  example_queries.txt
kb_query/: __init__.py  exceptions.py
kb_query/cli/: main.py
kb_query/core/: __init__.py  builder.py  entities.py  grammar.py  matcher.py
kb_query/formatters/: __init__.py  result_formatter.py
kb_query/generators/: __init__.py
kb_query/infrastructure/: sparql_client.py
kb_query/parsers/: __init__.py
kb_query/services/: query.py
memory/agents/: README.md
memory/sessions/: README.md
src/kb_query/: __init__.py  exceptions.py  interfaces.py  ontology_parser.py  pattern_generator.py  query_engine.py  query_parser.py  sparql_builder.py
src/preprocessing/: __init__.py  pattern_enrichment.py
tests/: test_ontology_parser.py
tests/unit/: test_entities.py  test_grammar_engine.py  test_pattern_matcher.py
